--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -3,10 +3,10 @@
 \section{Measure Theory in Probability Theory}
 \label{sec:measure-theory}
 
-Measure theory \parencites{tao2011introduction}[section 10.5]{bronstein1995taschenbuch} allows to treat both
-discrete and continuous probabilities under a common, generalized notation, primarily by the
-introduction of integrals over measures.  The basic idea of a measure is to generalize the concept
-of a \enquote{volume function} on sets.
+Measure theory \parencites{tao2011introduction}[section 10.5]{bronstein1995taschenbuch} allows us to
+treat both discrete and continuous probabilities (more general cases) under a common notation,
+primarily by the introduction of integrals over measures.  The basic idea of a measure is to
+generalize the concept of a \enquote{volume function} on sets.
 
 A \emph{measure space} is a triple \((\Omega, \mathcal{A}, \mu)\), where
 \(\mathcal{A} \subseteq 2^{\Omega}\) is a \(\sigma\)-algebra of \emph{measurable sets} (i.e., closed
@@ -19,7 +19,7 @@ under complement, countable union, and countable intersection), and
 for all disjoint countable families \((A_k)\) in \(\mathcal{A}\).  Additionally, we require that
 \(\mu(\emptyset) = 0\).  The necessity for \(\mathcal{A}\) and \(\mu\) being defined in such an
 elaborate way, instead of just taking it as \(2^{\Omega}\), is that for uncountable \(\Omega\), it
-is not possible to consistently assign a measure for the complete powerset.  The restriction to
+is not possible to consistently assign a measure to the complete power set.  The restriction to
 measurable subsets specifically filters out those pathological cases.
 
 In probability theory \parencite{kallenberg2006foundations}, one always operates within a special
@@ -28,9 +28,9 @@ we additionally require that \(P(\Omega) = 1\).  \(\Omega\) is then called the s
 \emph{events}~-- think of all possible outcomes of some experiment. 
 
 A function between measure spaces, or probability spaces in particular, is called \emph{measurable}
-when every preimage of a measureable set is measurable.  A \emph{random variable} \(X\) is a
-measureable function \((\Omega, \mathcal{A}, P) \to (\Psi, \mathcal{B}, P_X)\) from a probability
-space to another one with a \emph{pushforward} \(P_X\), such that
+when every preimage of a measurable set under the function is measurable.  A \emph{random variable}
+is a measurable function \(X : (\Omega, \mathcal{A}, P) \to (\Psi, \mathcal{B}, P_X)\) between
+probability spaces with a \emph{pushforward} \(P_X\), such that
 \begin{equation}
   \label{eq:pushforward}
   P_X(B) = P(X^{-1}(B))
@@ -46,12 +46,12 @@ solely in terms of the values in the domain of the random variable, with notatio
 \end{equation}
 where \(\alpha\) is an arbitrary predicate defining a set in the domain of \(X\).  In such a
 setting, it might the case that there exist some \emph{base measure} \(\mu\), such that probability
-evaluation can be expressed as integral over some \emph{density} with respect to \(\mu\):
+evaluation can be expressed as integral over some \emph{density} \(p_X\) with respect to \(\mu\):
 \begin{equation}
   \label{eq:measure-integral}
   \Prob{X \in A} = \int_{A} \prob[X]{x} \dif\mu(x),
 \end{equation}
-for all \(P_X\)-measureable sets \(A\), or in differential notation
+for all \(P_X\)-measurable sets \(A\), or in differential notation
 \begin{equation}
   \label{eq:measure-differential}
   \Prob{X \in \dif x} = \prob[X]{x} \dif\mu(x).
@@ -78,18 +78,19 @@ many works on the formalization of AD; see, for example, \textcite{abadi2020simp
 \textcite{vytiniotis2019differentiable}, \textcite{wang2019demystifying},
 \textcite{sajovic2016operational}, or \textcite{elliott2018simple}.
 
-To understand how AD works, let us first start with the mathematics.  What is a derivative, really?
-When we talk about gradients, which is what we really need in a gradient algorithm, this is usually
-a rather informal term for \enquote{the vector of partial derivatives}, which then points into an
-ascent direction.  This is however not the most natural form to work with in a compositional
-approach.  Instead of starting with a limit of tangent slopes, more insight is provided by viewing
-derivatives as best-approximating linear operators.  One of the most general definitions is provided
-through the \emph{Fréchet derivative} \parencite[p. 463]{bronstein1995taschenbuch}, essentially a
-generalization of the total differential\footnote{I prefer thinking in terms of the Fréchet
-  derivative, since it makes explicit the fact that derivatives are operators, and provides enough
-  flexibility while still being intuitive.  Different abstractions are possible, though.}.  Let
-\(X\) and \(Y\) be normed spaces.  A function \(f: U \subseteq X \to Y\) is Fréchet differentiable
-at a point \(x \in U\) if there exists a bounded linear operator \(A: X \to Y\) such that
+To understand how AD works, let us first ask: what is a derivative, really?  When we talk about
+gradients, which is what we really need in a gradient-based optimization algorithm, this is usually
+a rather loosely used term for \enquote{the vector of partial derivatives}, which then points into
+an ascent direction.  This is however not the most natural form to work with derivatives in a
+compositional approach.  Instead of starting with a limit of tangent slopes, more insight is
+provided by viewing derivatives as best-approximating linear operators.  One of the most general
+definitions is provided by the \emph{Fréchet derivative}
+\parencite[p. 463]{bronstein1995taschenbuch}, essentially a generalization of the total
+differential\footnote{I prefer thinking in terms of the Fréchet derivative, since it makes explicit
+  the fact that derivatives are operators, and provides enough flexibility while still being
+  intuitive.  Different abstractions are possible, though.}.  Let \(X\) and \(Y\) be normed spaces.
+A function \(f: U \subseteq X \to Y\) is Fréchet differentiable at a point \(x\) in environment
+\(U \ni x\) if there exists a bounded linear operator \(A: X \to Y\) such that
 \begin{equation}
   \label{eq:frechet}
   \lim_{\enVert{\Delta}_X \to 0} \frac{\enVert{f(x + \Delta) - f(x) -
@@ -98,39 +99,41 @@ at a point \(x \in U\) if there exists a bounded linear operator \(A: X \to Y\) 
 When such an \(A\) does exist, it is unique, and we may call it \emph{the} derivative of \(f\) at
 \(x\), writing \(\Dif f(x) = A\).  When the derivative exists for all \(x\), we can use \(\Dif\) as
 a well-defined higher-order function on its own; we will assume this in the following.\footnote{In
-  in practical cases, functions are often only piecewise differentiable due to branches, failing
-  this definition on a countable set of points.  Fortunately, the formalism of AD remains the same
-  under weaker notions of differentiability.  Additionally, such points usually behave well enough
-  to admit a subdifferential, from which we can just choose an arbitrary subgradient; this does not
-  necessary lead to a descent direction, but still allows minimization under reasonable conditions
-  \parencites[see][section 6.1]{pock2017convex}[][chapter
+  in practical cases, functions are frequently only piecewise differentiable due to branches,
+  failing this definition only on a countable set of points.  Fortunately, the formalism of AD
+  remains the same under weaker notions of differentiability.  Additionally, such points often
+  behave well enough to admit a subdifferential, from which we can just choose an arbitrary
+  subgradient; this does not necessary lead to a descent direction, but still allows minimization
+  under reasonable conditions \parencites[see][section 6.1]{pock2017convex}[][chapter
   14]{griewank2008evaluating}{abadi2020simple}.}
 
 The important fact here is that \(\Dif f(x)\) is still a function: specifically, a linear function
-approximating how \(f\) reacts to an input perturbation, \(\Delta\), around \(x\).  Or, in other
-words:
+approximating how \(f\) reacts to an input perturbation, \(\Delta\), around \(x\).  Or, in
+asymptotic notation:
 \begin{equation}
-  f(x + \Delta) = f(x) + \Dif f(x)(\Delta) + o\left(\enVert{\Delta}\right).
+  f(x + \Delta) = f(x) + \Dif f(x)(\Delta) + o\left(\enVert{\Delta}\right);
 \end{equation}
-This fact allows one to propagate differential values through composed functions, by the chain rule,
-which we write in the following compositional form:
+i.e., the linear approximation becomes better the closer \(\Delta\) comes to \(x\).  The operator
+view allows one to nicely write the propagation of differential values through composed functions,
+by the chain rule, which we write in the following compositional form:
 \begin{equation}
-  \Dif(\phi \circ \psi)(x) = \Dif\phi(\psi(x)) \circ \Dif\psi(x).
+  \Dif(\phi \circ \psi)(x) = \Dif\phi(\psi(x)) \circ \Dif\psi(x)
 \end{equation}
-for differentiable functions \(\phi\) and \(\psi\).  In the one-dimensional case, we simply have
+for differentiable functions \(\phi\) and \(\psi\), with composition
+\((\phi \circ \psi)(x) = \phi(\psi(x))\).  In the one-dimensional case, we simply have
 \begin{equation}
   \Dif \phi(x) = \Delta \mapsto \partial_1 \phi(x) \, \Delta,
 \end{equation}
-where \(\partial_1 \phi(x)\) denotes the standard \enquote{primitive} derivative, since linear maps
-are exactly multiplications by a scalar.  Therefore, we can recover the chain rule
+where \(\partial_1 \phi(x)\) denotes the standard \enquote{primitive} derivative, since scalar
+linear maps are exactly multiplications by a scalar.  Therefore, we can recover the chain rule
 \begin{equation}
   \begin{aligned}
     \Dif(\phi \circ \psi)(x)(\Delta) &=
-    \left( \Dif\phi(\psi(x)) \circ \Dif\psi(x) \right)(\Delta) \\
+    \big( \Dif\phi(\psi(x)) \circ \Dif\psi(x) \big)(\Delta) \\
     % &= \Dif\phi(\psi(x))\left( \Dif\psi(x)(\Delta) \right) \\
     % &= \Dif\phi(\psi(x))\left( \partial_1 \psi(x) \, \Delta \right) \\
     % &= \partial_1\phi(\psi(x)) \, \partial_1 \psi(x) \, \Delta \\
-    &= \left( \partial_1\phi(\psi(x)) \, \partial_1 \psi(x) \right) \, \Delta,
+    &= \big( \partial_1\phi(\psi(x)) \, \partial_1 \psi(x) \big) \, \Delta,
   \end{aligned}
 \end{equation}
 as we know it from calculus.  Here, the product in the resulting expression arises from the fact
@@ -142,14 +145,13 @@ seem: as I will now explain, AD algorithms evaluate both \((\phi \circ \psi)(x)\
 \(\Dif(\phi \circ \psi)(x)\) at once, in lockstep fashion, so that the intermediate values of the
 former can be reused in calculation of the latter.
 
-Consider the specific case of \(f(x, y) = sin(x) - y\). For simpler notation, let
-\(g = (x, y) \mapsto x - y\) replace the infix subtraction operator, with a derivative of
-\(\Dif g(x)(\Delta_1, \Delta_2) = \Delta_1 - \Delta_2\), a linear function of two arguments.  By
-composition, we have:
+Consider the specific case of \(f(x, y) = g(sin(x), y) = sin(x) - y\). The binary subtraction
+operator \(g\) has a derivative of \(\Dif g(x)(\Delta_1, \Delta_2) = \Delta_1 - \Delta_2\), a linear
+function of two arguments.  By composition, we have:
 \begin{equation}
   \begin{aligned}
-    \Dif f(x, y) &= \Dif(g \circ (\sin \otimes \ident))(x, y) \\
-    &= \Dif g\left( (\sin \otimes \ident)(x, y) \right) \circ \Dif(\sin \otimes \ident)(x, y) \\
+    \Dif f(x, y) &= \Dif \big( g \circ (\sin \otimes \ident) \big)(x, y) \\
+    &= \Dif g\big( (\sin \otimes \ident)(x, y) \big) \circ \Dif(\sin \otimes \ident)(x, y) \\
     % &= \left( (\Delta_1, \Delta_2) \mapsto \Delta_1 - \Delta_2 \right) \circ \left( \Dif\sin(x)
       % \otimes \Dif \ident(y) \right) \\
     % &= (\Delta_1, \Delta_2) \mapsto \partial_1\sin(x) \, \Delta_1 - 1 \Delta_2 \\
@@ -159,7 +161,7 @@ composition, we have:
 (where \(\ident\) is the identity function, and
 \((\phi \otimes \psi)(\alpha, \beta) = (\phi(\alpha), \psi(\beta))\) defines product morphisms).  In
 order to calculate this algorithmically, let us expand the computation of \(f\) into a sequence of
-intermediate, primitive calculations, as we would have in a programmatical representation:
+intermediate, primitive calculations, as we would have in a programmatic representation:
 \begin{equation}
   \label{eq:ad-primal}
   \begin{aligned}
@@ -233,7 +235,7 @@ perturbation application: instead of calculating a primal sensitivity with respe
 perturbation (\(\Delta\)), it maps a linear output perturbation (\(\mathfrak{d}\)) to an operator
 that applies this to the primal sensitivity:
 \begin{equation}
-  \CoDif \phi(x)(\mathfrak{d}) = \Delta \mapsto \mathfrak{d}(\Dif \phi(x)(\Delta)).
+  \CoDif \phi(x)(\mathfrak{d}) = \Delta \mapsto \mathfrak{d} \big(\Dif \phi(x)(\Delta) \big).
 \end{equation}
 The adjoint differential is therefore an object of the double dual space.  This becomes more
 readable when we fix a basis to represent the derivative.  Doing so, in the finite-dimensional case,
@@ -246,8 +248,8 @@ operator that should be applied to the result, but does not yet apply it to the 
 perturbation~-- therefore, it returns a matrix:
 \begin{equation}
   \begin{aligned}
-    \mathfrak{d} (\Dif \phi(x)(\Delta)) &= \transpose{d} J_{\phi}(x) \Delta \\
-    &= \transpose{\left( \transpose{J_{\phi}(x)} d \right)} \Delta \\
+    \mathfrak{d} \big( \Dif \phi(x)(\Delta) \big) &= \transpose{d} J_{\phi}(x) \Delta \\
+    &= \transpose{\big( \transpose{J_{\phi}(x)} d \big)} \Delta \\
     &= \CoDif \phi(x)(\mathfrak{d})(\Delta),
   \end{aligned}
 \end{equation}
@@ -263,24 +265,24 @@ composition in the chain rule:
 \begin{equation}
   \begin{aligned}
     \CoDif (\phi \circ \psi)(x)(\mathfrak{d}) &= \transpose{d} J_{\phi}(\psi(x)) J_{\psi}(x) \\
-    &=  \transpose{\left( \transpose{J_{\psi}(x)} \transpose{J_{\phi}(\psi(x))} d \right)} \\
-    &= \left( \CoDif\psi(x) \circ \CoDif\phi(\psi(x)) \right)(\mathfrak{d}).
+    &=  \transpose{\big( \transpose{J_{\psi}(x)} \transpose{J_{\phi}(\psi(x))} d \big)} \\
+    &= \big( \CoDif\psi(x) \circ \CoDif\phi(\psi(x)) \big)(\mathfrak{d}).
   \end{aligned}
 \end{equation}
 For our example function \(f\), this gives the same structural form of the result as the forward
 mode~-- only that now, the value is a vector:
 \begin{equation}
   \begin{aligned}
-    \CoDif f(x, y) &= \CoDif (g \circ (\sin \otimes \ident))(x, y) \\
-    &= \CoDif(\sin \otimes \ident) \circ \CoDif g((\sin \otimes \ident)(x, y)) \\
+    \CoDif f(x, y) &= \CoDif \big( g \circ (\sin \otimes \ident) \big)(x, y) \\
+    &= \CoDif(\sin \otimes \ident) \circ \CoDif g \big( (\sin \otimes \ident)(x, y) \big) \\
     % &= (\CoDif\sin \otimes \CoDif\ident) \circ (\delta \mapsto \transpose{[\delta, -\delta]}) \\
     % &= (\partial_1 \sin(x) \otimes 1) \circ (\delta \mapsto \transpose{[\delta, -\delta]}) \\
     % &= \delta \mapsto \transpose{[\partial_1\sin(x)\delta, -1 \delta]} \\
     &= \delta \mapsto \transpose{[\cos(x)\delta, -\delta]}.
   \end{aligned}
 \end{equation}
-In this form, starting with an output perturbation \(\delta = 1\), we get back the gradient tuple
-through just one evaluation.  Incidentally, this is nothing else than the back-propagation
+In this form, starting with an output perturbation \(\delta = 1\), we get back the complete gradient
+vector through just one evaluation.  Incidentally, this is nothing else than the back-propagation
 \enquote{trick} \parencite{bishop2006pattern}!  Furthermore, applying this result to
 \([\Delta_1, \Delta_2]\) gives back the linear combination of the forward mode result.
 
@@ -299,16 +301,16 @@ intermediate values \(\bar{v}\).  For the values in equation~\eqref{eq:ad-primal
 \end{equation}
 which is displayed in the red graph in \ref{fig:comp-graph-bw}.  Note that now, the back-propagated
 values can not be computed in parallel with forward evaluation; hence the equations are stated in
-reverse order.  Instead, the intermediate primal values have to be remembered and reused in a
-second, backward pass.
+reverse order.  Instead of one lockstep evaluation, the intermediate primal values have to be stored
+and reused in a second, backward pass.
 
 Finally, it has to be noted that the two described modes of automatic differentiation are only two
 extremes of a spectrum.  Forward and backward calculations can really be interleaved in arbitrary
 order, just as it is possible to multiply Jacobians and their transposes in different order.  One
 frequent use case of this \emph{mixed-mode AD} is when loss functions, differentiated using backward
-mode, contain broadcasting functions; for example, nonlinearities within neural networks.  These
-have a type of \(\RR^N \to \RR^N\), but only involve a linear number of operations, so forward mode
-pays off\footnote{As a rule of thumb in Julia, for \(f: \RR^M \to \RR^N\), forward mode typically
+mode, contain broadcasting functions, e.g., nonlinearities within neural networks.  These have a
+type of \(\RR^N \to \RR^N\), but only involve a linear number of operations, so forward mode pays
+off\footnote{As a rule of thumb in Julia, for \(f: \RR^M \to \RR^N\), forward mode typically
   performs better when \(M \ll N\) or as long as \(M \lessapprox 100\).  This folklore should always
   be confirmed by benchmarking, though.  See
   \url{https://github.com/JuliaDiff/ReverseDiff.jl\#should-i-use-reversediff-or-forwarddiff}.}.
@@ -322,10 +324,10 @@ optimal order of derivative evaluation is hard~-- this so-called \emph{optimal J
 
 Forward mode can be recast in mathematically equivalent form by using dual numbers
 \parencites[see][section 3.1.1]{baydin2018automatic}{deakin1966functions}.  These consist of two
-parts, similar to complex numbers: \(z = x + y\epsilon\).  However, contrary to the imaginary unit,
+parts, similar to complex numbers: \(z = x + y\epsilon\).  However, unlike to the imaginary unit,
 the infinitesimal unit \(\epsilon\) vanishes under multiplication with itself: \(\epsilon^2 = 0\).
-The consequence of this is that functions can naturally be extended to dual numbers by nonstandard
-interpretation as truncated Taylor series:
+The consequence of this is that analytic functions can naturally be extended to dual numbers by
+nonstandard interpretation as truncated Taylor series:
 \begin{equation}
   \phi(x + \epsilon) = \phi(x) + \partial_1\phi(x)\epsilon + \underbrace{\frac{\partial^2_1\phi(x)}{2}\epsilon^2
   + \ldots}_{\epsilon^2 (\ldots) = 0}
