Correct title page and some front matter things

--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -20,7 +20,7 @@
   embedded language within Julia.  Through this, an executed Turing model can be analysed, and the
   dependency structure of involved random variables be extracted from it.  Given this structure,
   analytical Gibbs conditionals can be calculated for a large set of models and passed to Turing's
-  inference mechanism, where they are used in Markov-Chain Monte Carlo samplers approximating the
+  inference mechanism, where they are used in Markov Chain Monte Carlo samplers approximating the
   modeled distribution.
 \end{abstract}
 
