--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -87,7 +87,7 @@ focus of these efforts has been optimization of linear algebra/tensor calculatio
 differentiation, other use cases start to emerge, for example automatic detection of sparsity
 patterns \parencite{gowda2019sparsity}.
 
-\section{Scope of the Thesis}
+\section{Scope}
 \label{sec:scope}
 
 Computation graphs are thus a required resource for many algorithms.  In this thesis, I present a
