--- a/thesis/license.tex
+++ b/thesis/license.tex
@@ -7,16 +7,17 @@
     \abstracttextfont
     \vspace*{\stretch{1}}
     \begin{center}
-      This work is licensed under a \\ \href{http://creativecommons.org/licenses/by-sa/4.0/}{Creative
-        Commons Attribution-ShareAlike 4.0 International License}.
+      This work is licensed under the \\
+      \href{http://creativecommons.org/licenses/by-sa/4.0/}{Creative Commons Attribution-ShareAlike
+        4.0 International License}.
     \end{center}
     \begin{center}
       \includegraphics[scale=1]{figures/by-sa}
     \end{center}
     \vspace{\stretch{2}}
     \begin{center}
-      All code samples, unless otherwise noted or cited from other sources, \\ are also available under an
-      \href{http://opensource.org/licenses/MIT}{\abbrev{MIT} license}:
+      All code samples, unless otherwise noted or cited from other sources, \\ are also available
+      under the \href{http://opensource.org/licenses/MIT}{\abbrev{MIT} license}:
     \end{center}
     \vspace*{-1ex}
     \begin{ttfamily}
@@ -52,7 +53,7 @@
 
         The \LaTeX{} source of this document is available at\\
         \url{https://github.com/phipsgabler/master-thesis} \\
-        or upon request from the author\footnote{\texttt{pgabler@student.tugraz.at}}.
+        or upon request from the author\footnote{\texttt{<first name>.<last name>@protonmail.com}}.
       \end{center}
     \end{adjustwidth}
     
