--- a/thesis/title.tex
+++ b/thesis/title.tex
@@ -20,15 +20,15 @@
 %%   40mm of Logo (here: 2mm margin in picture!)
 %%    8mm from top and from right
 %% Source: http://portal.tugraz.at/portal/page/portal/TU_Graz/Services/BDR/Oeffentlichkeitsarbeit/CD/Logo%20Anwendungsrichtlinien
-\AddToShipoutPicture*{%
-  \AtPageUpperLeft{%
-    \hspace{\paperwidth}%
-    \raisebox{-19mm}{%\baselineskip}{%
-     \makebox[-4mm][r]{\includegraphics[width=42mm]{figures/TU_Graz_Logo.pdf}}
-}}}%
+% \AddToShipoutPicture*{%
+%   \AtPageUpperLeft{%
+%     \hspace{\paperwidth}%
+%     \raisebox{-19mm}{%\baselineskip}{%
+%      \makebox[-4mm][r]{\includegraphics[width=42mm]{figures/TU_Graz_Logo.pdf}}
+% }}}%
 
 \begin{center}
-~
+\includegraphics[width=42mm]{figures/TU_Graz_Logo.pdf}
 \vfill\vfill\vfill
 
 \sffamily
@@ -46,13 +46,16 @@ Transformations
 
 \vfill\vfill\vfill\vfill
 
-{\normalsize\bfseries Master's Thesis}\\
+\textsc{Master's Thesis}\\
 \vfill
 to achieve the university degree of\\
-{Master of Science}\\
+{Master of Science}
 \vfill
+Master's degree programme:\\
+Computer Science
+\vfill\vfill\vfill
 submitted to\\
-{\normalsize\bfseries Graz University of Technology}
+Graz University of Technology
 
 \vfill\vfill\vfill
 \vfill\vfill\vfill
