--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper,twoside,draft]{memoir}
+\documentclass[11pt,a4paper,twoside]{memoir}
 \usepackage[final,protrusion,babel]{microtype}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
