--- a/thesis/tracking_models.tex
+++ b/thesis/tracking_models.tex
@@ -75,6 +75,7 @@ the arguments and restructuring their contents into the right form.
 The other problem is the handling of mutation, and tracking of modified array elements.  For
 example, a hidden Markov model with states \jlinl{s} and transition matrix \jlinl{T} might contain
 code like this:
+\enlargethispage{\baselineskip}
 \begin{lstlisting}
 s = zeros(Int, N)
 s[1] ~ Categorical(K)
@@ -87,7 +88,7 @@ set up, and then subsequently populated by the results of the tilde statements d
 process.  In this form, only the individual variables \jlinl{s[i]} are \enquote{seen} by the
 inference algorithm.  Internally, the respective tilde statements are translated to array
 assignments of the form \jlinl{s[i] = tilde_assume(...)}, but with additional lowering of the
-involved arguments, after which the corresponding IR will look approximately like this:\todo{page break}
+involved arguments, after which the corresponding IR will look approximately like this:
 \begin{lstlisting}
 %9 = %i - 1                                  # i - 1
 %10 = getindex(%s, %9)                       # s[i - 1]
@@ -119,13 +120,12 @@ supported in \dppljl{}, are not supported by \autogibbsjl{} at the moment.
 \newthought{To illustrate} the extracted dependency graphs obtained by \autogibbsjl{}, we will
 examine the two simple models shown in listing~\ref{lst:dependency-examples}: a Boolean variable
 sampled from a mixture of two Bernoulli distributions, and a simple single-variable Gaussian model
-with conjugate prior.\todo{fix caption alignment} The pretty-printed \jlinl{Graph} objects resulting
-from each model are shown below them, in listing~\ref{lst:trace-examples}.  We can see that the
-model arguments for observations occur as constant values, and all of the intermediate function
-calls visible in the original model definitions are preserved.  From this structure, \autogibbsjl{}
-can construct output in the Dot graph format and visualized using GraphViz
-\parencite{gansner2000open}.  The rendered output of the example models is shown in
-figure~\ref{fig:geom-deps}.\todo{orphan}
+with conjugate prior.  The pretty-printed \jlinl{Graph} objects resulting from each model are shown
+below them, in listing~\ref{lst:trace-examples}.  We can see that the model arguments for
+observations occur as constant values, and all of the intermediate function calls visible in the
+original model definitions are preserved.  From this structure, \autogibbsjl{} can construct output
+in the Dot graph format and visualized using GraphViz \parencite{gansner2000open}.  The rendered
+output of the example models is shown in figure~\ref{fig:geom-deps}.
 
 \begin{lstfloat}[p]
 \begin{lstlisting}[style=lstfloat]
@@ -178,10 +178,16 @@ end
 \end{lrbox}
 \begin{lstfloat}[p]
   \loosesubcaptions
-  \subbottom[Trace of \texttt{bernoulli\_mixture(false)} (some type parameters not shown).\hfill]{%
-    \usebox{\bernoullitrace}}
-  \subbottom[Trace of \texttt{hierarchical\_gaussian(1.4)}.\hfill]{%
-    \usebox{\gaussiantrace}}
+  \begin{minipage}{\textwidth}
+    \usebox{\bernoullitrace}
+    \subcaption{Trace of \texttt{bernoulli\_mixture(false)} (some type parameters not shown).}
+  \end{minipage}
+  \par\vspace{\baselineskip}
+  \begin{minipage}{\textwidth}
+    \usebox{\gaussiantrace}
+    \subcaption{Trace of \texttt{hierarchical\_gaussian(1.4)}.}
+  \end{minipage}
+    \par\vspace{\baselineskip}
   \caption{Traced structure of the two example models introduced above, with fixed observations
     \texttt{false} and \texttt{1.4}.  Values in \(\langle\)angle brackets\(\rangle\) denote
     intermediate values (similar to SSA variables), and right arrows denote the resulting values of
@@ -254,11 +260,11 @@ round, and the \autogibbsjl{} sampler has, in generalized form, been added to \t
 \newsavebox{\bmlikelihoods}
 \begin{lrbox}{\bmlikelihoods}
 \begin{lstlisting}[style=lstfloat]
-⟨2⟩ = false                 ⤳ false
+⟨2⟩ = false                ⤳ false
 ⟨3⟩ = Dirichlet(2, 0.5)    ⤳ Dirichlet(2, 0.5)
 ⟨4⟩ = w ~ ⟨3⟩              ⤳ logpdf(Dirichlet(2, 0.5), θ[w])
-⟨5⟩ = DNP([0.3, 0.7], ⟨4⟩) ⤳ DiscreteNonParametric([0.3, 0.7], θ[w])
-⟨6⟩ = π ~ ⟨5⟩              ⤳ logpdf(DiscreteNonParametric([0.3, 0.7], θ[w]), θ[π])
+⟨5⟩ = DNP([0.3, 0.7], ⟨4⟩) ⤳ DiscreteNonParametric([.3, .7], θ[w])
+⟨6⟩ = π ~ ⟨5⟩              ⤳ logpdf(DiscreteNonParametric([.3, .7], θ[w]), θ[π])
 ⟨7⟩ = Bernoulli(⟨6⟩)       ⤳ Bernoulli(θ[π])
 ⟨8⟩ = x ~ ⟨7⟩ ← ⟨2⟩       ⤳ logpdf(Bernoulli(θ[π]), θ[x])
 \end{lstlisting}
@@ -281,11 +287,19 @@ round, and the \autogibbsjl{} sampler has, in generalized form, been added to \t
 \end{lrbox}
 \begin{figure}[t]
   \loosesubcaptions
-  \subbottom[\texttt{bernoulli\_mixture(false)}]{\usebox{\bmlikelihoods}}
-  \subbottom[\texttt{hierarchical\_gaussian(1.4)}]{\usebox{\hglikelihoods}}
+  \begin{minipage}{1.0\linewidth}
+    \usebox{\bmlikelihoods}
+    \subcaption{\texttt{bernoulli\_mixture(false)}}
+  \end{minipage}
+  \par\vspace{\baselineskip}
+  \begin{minipage}{1.0\linewidth}
+    \usebox{\hglikelihoods}
+    \subcaption{\texttt{hierarchical\_gaussian(1.4)}}
+  \end{minipage}
+  \par\vspace{\baselineskip}
   \caption{Association of the dependency graph of the example models from
     listing~\ref{lst:dependency-examples} with intermediate symbolic functions.  The expressions on
-    the right are implicit functions of \protect\jlinl{θ}.  (\texttt{DNP} is used instead of
+    the right are implicit functions of \protect\jlinl{θ}.  (\texttt{DNP} is used to abbreviate
     \texttt{DiscreteNonParametric} to avoid breaking lines.)}
   \label{fig:continuations}
 \end{figure}
@@ -309,12 +323,12 @@ All resulting expressions are thereby to be understood as implicit functions of 
 new expression function objects can then be numerically evaluated as log-densities for given values
 of all random variables.  For illustration, the joint densities of the \jlinl{bernoulli_mixture} and
 \jlinl{hierarchical_gaussian} models introduced above in listing~\ref{lst:dependency-examples}, are
-associated with corresponding symbolic functions as shown in figure~\ref{fig:continuations}\todo{fix
-  caption alignment}.  By adding the log-likelihoods for each tilde statement, we get the symbolic
-log-joint density as, for example,
+associated with corresponding symbolic functions as shown in figure~\ref{fig:continuations}.  By
+adding the log-likelihoods for each tilde statement, we get the symbolic log-joint density as, for
+example,
+\enlargethispage{\baselineskip}
 \begin{lstlisting}
-logpdf(Gamma(2.0, 0.33), θ[λ]) + 
-  logpdf(Normal(0, sqrt(/(1, θ[λ]))), θ[m]) + 
+logpdf(Gamma(2.0, 0.33), θ[λ]) + logpdf(Normal(0, sqrt(/(1, θ[λ]))), θ[m]) + 
   logpdf(Normal(θ[m], sqrt(/(1, θ[λ]))), θ[x]),
 \end{lstlisting}
 corresponding to the density over \(\lambda\), \(m\), and \(x\), factorized as
@@ -398,8 +412,8 @@ To give a concrete illustration of the construction in programmatic terms, consi
   % \end{equation*}
   Here, \(\operatorname{softmax}(x) = \broadcast{\exp}(x) / \sum_i \exp(x_{i})\) is the
   normalization operation on log-probabilities, \(\mathrm{eval}\) the evaluation function for
-  likelihood closures, and \(\theta[v \leadsto x]\) denotes setting the value of variable \(v\) in
-  \(\theta\) to~\(x\).\todo{orphan}
+  likelihood closures, and \(\theta[v \leadsto x]\) denotes setting the value of the variable \(v\)
+  in \(\theta\) to~\(x\).
 \end{enumerate}
 The result of this process is a collection of closures that represent the conditional likelihoods as
 \enquote{kernels}: functions from conditioned-on variables to distribution objects.  These closures
@@ -493,7 +507,7 @@ represent a nonparametric example \parencite[section 2.2]{hjort2010bayesian}:
 \end{equation}
 The concrete values of all involved hyper-parameters can be found in the test directory of the
 published source
-code\footnote{\protect\href{https://github.com/phipsgabler/AutoGibbs.jl/tree/2b433f8f5c37a55f63fbf175193130b46c8b569f/test}{https://github.com/phipsgabler/AutoGibbs.jl/tree/master/test}}.
+code\footnote{\protect\href{https://github.com/phipsgabler/AutoGibbs.jl/tree/2b433f8f5c37a55f63fbf175193130b46c8b569f/test}{\url{https://github.com/phipsgabler/AutoGibbs.jl/tree/master/test}}}.
 
 The three interesting classes of metrics in the context of this work are:
 \begin{enumerate}
@@ -515,7 +529,7 @@ with step size \(0.05\)).  The experiments have been set up to vary between AG a
 \(10\), \(25\), and \(50\) observations, since this number determines the size of the trace, and
 thus influences both AG's compile times and the overall sampling time.  All measurements were
 conducted using the following system configuration, as shown by
-\jlinl{InteractiveUtils.versioninfo()}:\todo{page break?}
+\jlinl{InteractiveUtils.versioninfo()}:
 \begin{lstlisting}
 Julia Version 1.3.1
 Commit 2d5741174c (2019-12-30 21:36 UTC)
