--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -6,14 +6,17 @@
 \newcommand{\longtitle}{Automatic Graph Tracking in Probabilistic Programs via Source Transformations}
 
 % LINKS AND PDF OPTIONS
+
 \usepackage[pdfa,final]{hyperref}
 \hypersetup{
   pdfinfo={
     Author={Philipp Gabler},
     Title={\longtitle}
   },
-  hyperfootnotes=false
+  hyperfootnotes=false,
+  hidelinks=true
 }
+\usepackage[x-3]{pdfx}
 
 \usepackage{typographic_setup}
 
